--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>Sparkle Digital</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/SparkleLogo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -39,7 +38,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo">  <img class="logo" width="60px" height="60px" src="assets/img/SparkleLogo.png" alt=""> <a href="index.html">Sparkle Digital</a></h1>
+      <h1 class="logo">  <img class="logo" width="50px" height="50px" src="assets/img/SparkleLogo.png" alt=""> <a href="index.html">Sparkle Digital</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       <nav id="navbar" class="navbar">
@@ -62,7 +61,7 @@
 
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       <h1 class="heroTitle"> <img class="logo" width="60px" height="60px" src="assets/img/LogoWhite.png"> Sparkle Digital</h1>
-      <h2>We are team of talented Virtual Assistance</h2>
+      <h2>We are a team of talented Virtual Assistants, adding a touch of sparkle to your tasks and projects</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
 
@@ -127,10 +126,10 @@
   
           <div class="row content">
             <div class="col-md-5" data-aos="fade-right" data-aos-delay="100">
-              <img src="assets/img/features-1.png" class="img-fluid" alt="">
+              <img src="assets/img/webdesign.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-md-7 pt-4" data-aos="fade-left" data-aos-delay="100">
-              <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+              <h3>Web Designing</h3>
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua.
@@ -145,10 +144,10 @@
   
           <div class="row content">
             <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-              <img src="assets/img/features-2.png" class="img-fluid" alt="">
+              <img src="assets/img/marketStrategy.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
-              <h3>Corporis temporibus maiores provident</h3>
+              <h3>Market Strategies</h3>
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua.
@@ -163,10 +162,10 @@
   
           <div class="row content">
             <div class="col-md-5" data-aos="fade-right">
-              <img src="assets/img/features-3.png" class="img-fluid" alt="">
+              <img src="assets/img/social.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-md-7 pt-5" data-aos="fade-left">
-              <h3>Sunt consequatur ad ut est nulla consectetur reiciendis animi voluptas</h3>
+              <h3>Social Media Strategy</h3>
               <p>Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus quia minima quod. Sunt saepe odit aut quia voluptatem hic voluptas dolor doloremque.</p>
               <ul>
                 <li><i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
@@ -178,10 +177,43 @@
   
           <div class="row content">
             <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-              <img src="assets/img/features-4.png" class="img-fluid" alt="">
+              <img src="assets/img/content.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
-              <h3>Quas et necessitatibus eaque impedit ipsum animi consequatur incidunt in</h3>
+              <h3>Content Creation</h3>
+              <p class="fst-italic">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua.
+              </p>
+              <p>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                culpa qui officia deserunt mollit anim id est laborum
+              </p>
+            </div>
+          </div>
+
+          <div class="row content">
+            <div class="col-md-5" data-aos="fade-right">
+              <img src="assets/img/brandingphoto.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-md-7 pt-5" data-aos="fade-left">
+              <h3>Branding Photography</h3>
+              <p>Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus quia minima quod. Sunt saepe odit aut quia voluptatem hic voluptas dolor doloremque.</p>
+              <ul>
+                <li><i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                <li><i class="bi bi-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                <li><i class="bi bi-check"></i> Facilis ut et voluptatem aperiam. Autem soluta ad fugiat.</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="row content">
+            <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
+              <img src="assets/img/branddesign.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
+              <h3>Branding Design</h3>
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua.
@@ -198,51 +230,7 @@
       </section><!-- End Features Section -->
 
     <!-- ======= Steps Section ======= -->
-    <section id="steps" class="steps">
-      <div class="container">
-
-        <div class="row no-gutters" data-aos="fade-up">
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="100">
-            <span>01</span>
-            <h4>Lorem Ipsum</h4>
-            <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
-          </div>
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="200">
-            <span>02</span>
-            <h4>Repellat Nihil</h4>
-            <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
-          </div>
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="300">
-            <span>03</span>
-            <h4> Ad ad velit qui</h4>
-            <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
-          </div>
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="100">
-            <span>04</span>
-            <h4>Repellendus molestiae</h4>
-            <p>Inventore quo sint a sint rerum. Distinctio blanditiis deserunt quod soluta quod nam mider lando casa</p>
-          </div>
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="200">
-            <span>05</span>
-            <h4>Sapiente Magnam</h4>
-            <p>Vitae dolorem in deleniti ipsum omnis tempore voluptatem. Qui possimus est repellendus est quibusdam</p>
-          </div>
-
-          <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="300">
-            <span>06</span>
-            <h4>Facilis Impedit</h4>
-            <p>Quis eum numquam veniam ea voluptatibus voluptas. Excepturi aut nostrum repudiandae voluptatibus corporis sequi</p>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Steps Section -->
+    
 
     <!-- ======= Services Section ======= -->
     <section id="features" class="services">
@@ -770,14 +758,14 @@
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>140 S DEARBON ST CHIGAGO IL, 60603, United States</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>info@sparkledigital.org<br></p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -831,13 +819,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Bikin</h3>
+            <h3>Sparkle Digital</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
+              140 S DEARBON ST <br>
+              CHIGAGO IL 60603<br>
               United States <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Email:</strong> info@sparkledigital.org<br>
             </p>
           </div>
 
@@ -856,10 +844,11 @@
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Market Strategies</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Social Media Strategies</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Content Creations</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Branding Photography</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Branding Design</a></li>
             </ul>
           </div>
 
@@ -879,14 +868,14 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Bikin</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Sparkle Digital</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bikin-free-simple-landing-page-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          Designed by <a href="TeamDropbox">BootstrapMade</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
