--- a/index.html
+++ b/index.html
@@ -758,6 +758,7 @@
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5941.222424040089!2d-87.63473995974711!3d41.879710601842184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2cbca2abffd9%3A0xb355787ce762a4ac!2s140%20S%20Dearborn%20St%2C%20Chicago%2C%20IL%2060603%2C%20USA!5e0!3m2!1sen!2sph!4v1685573914963!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   <p>140 S DEARBON ST CHIGAGO IL, 60603, United States</p>
                 </div>
               </div>
@@ -875,7 +876,7 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bikin-free-simple-landing-page-template/ -->
-          Designed by <a href="TeamDropbox">BootstrapMade</a>
+          Designed by <a href="">TeamDropbox</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
