--- a/index.html
+++ b/index.html
@@ -762,6 +762,14 @@
                   <p>140 S DEARBON ST CHIGAGO IL, 60603, United States</p>
                 </div>
               </div>
+              
+            </div>
+
+          </div>
+
+          <div class="col-lg-6 mt-4 mt-md-0">
+            <div class="row">
+              
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
@@ -769,7 +777,7 @@
                   <p>info@sparkledigital.org<br></p>
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 mb-3">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
@@ -778,9 +786,7 @@
               </div>
             </div>
 
-          </div>
 
-          <div class="col-lg-6 mt-4 mt-md-0">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
