--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
             <img src="assets/img/branddesign.jpg" class="img-fluid" alt="">
           </div>
-        </div>
+      
         <div class="col-md-7 pt-5" data-aos="fade-left">
           <h3>Branding Design</h3>
           <p>We create visually appealing brand identities, including logos, colors, and typography. By understanding
@@ -249,6 +249,7 @@
           </ul>
         </div>
       </div>
+  
       </div>
     </section><!-- End Features Section -->
 
@@ -829,14 +830,14 @@
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Our Address</h3>
-                  <p>140 S DEARBON ST CHIGAGO IL, 60603</p>
+                  <p> <strong>140 S DEARBON ST CHIGAGO IL, 60603</strong></p>
                 </div>
               </div>
               <div class="col-md-12">
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@sparkledigital.org<br></p>
+                  <p><strong>info@sparkledigital.org</strong><br></p>
                 </div>
               </div>
               <!-- <div class="col-md-6">
