--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class='bx bx-search-alt-2'></i>
-                  <h2> <strong>Markeing Stategies</strong> </h2>
+                  <h2> <strong>Markeing Strategies</strong> </h2>
 
                 </div>
                 <div class="col-md-6 icon-box mb-5" data-aos="fade-up" data-aos-delay="400">
