--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#features">Features</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#features">Features</a></li> -->
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
@@ -81,8 +81,8 @@
 
         <div class="row no-gutters">
           <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-right">
-            <div class="content">
-              <h1 class="display-4"><strong> We Offers</strong></h1>
+            <div class="content d-flex flex-column justify-content-center">
+              <h1 class="display-4 mx-5 px-4"><img class="logo" width="60px" height="60px" src="assets/img/LogoWhite.png"><strong> We Offers</strong></h1>
 
             </div>
           </div>
@@ -670,7 +670,7 @@
                 <li>Search Engine Optimization (SEO)</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
@@ -687,7 +687,7 @@
                 <li>Strategy Development</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
@@ -704,7 +704,7 @@
                 <li>Media Strategy Services </li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
@@ -743,7 +743,7 @@
 
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
@@ -760,7 +760,7 @@
                 <li>Visual elements</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Subscribe</a>
               </div>
             </div>
           </div>
