--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
               </div>
             </div>
 
-            <form class="border bg-white shadow" action="https://formspree.io/f/moqzoaor" method="POST">
+             <form class="border bg-white shadow" action="https://formspree.io/f/xnqykqqj" method="POST">
               <div class="row px-4 mt-4">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
