--- a/index.html
+++ b/index.html
@@ -34,16 +34,6 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
-  <script src="index.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-  </script>
-  <script type="text/javascript">
-    (function () {
-      emailjs.init("e_7ZSKEdiurjWzhMJ");
-    })();
-  </script>
-
   <!-- <script>
     function sendEmail() {
       var name = document.getElementById("name").value;
@@ -109,8 +99,7 @@
           <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-right">
             <div class="content d-flex flex-column justify-content-center">
               <h1 class="display-4 mx-5 px-4"><img class="logo" width="60px" height="60px"
-                  src="assets/img/LogoWhite.png"><strong> We Offers</strong></h1>
-
+                  src="assets/img/LogoWhite.png"><strong> We Offer</strong></h1>
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch" data-aos="fade-left">
@@ -127,7 +116,7 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class='bx bx-search-alt-2'></i>
-                  <h2> <strong>Markeing Strategies</strong> </h2>
+                  <h2> <strong>Marketing Strategies</strong> </h2>
 
                 </div>
                 <div class="col-md-6 icon-box mb-5" data-aos="fade-up" data-aos-delay="400">
@@ -926,7 +915,6 @@
                   <p> <strong>140 S DEARBON ST CHIGAGO IL, 60603</strong></p>
                 </div>
               </div>
-
               <!-- <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
@@ -948,7 +936,7 @@
               </div>
             </div>
 
-            <form class="border bg-white shadow" action="https://formspree.io/f/moqzoaor" method="POST">
+            <form class="border bg-white shadow" action="https://formspree.io/f/xnqykqqj" method="POST">
               <div class="row px-4 mt-4">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -963,7 +951,7 @@
               </div>
               <div class="my-3">
                 <!-- <div class="loading">Loading</div> -->
-                <!-- <div class="error-message"></div> -->
+                <div class="error-message"></div>
                 <!-- <div class="sent-message">Your message has been sent. Thank you!</div> -->
               </div>
               <div class="text-center mb-4"><button type="submit" class="btn btn-primary">Send Message</button>
@@ -976,7 +964,6 @@
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
-
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
