--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
     <section id="about" class="about">
       <div class="container">
 
-        <div class="row no-gutters">
+      <div class="row no-gutters">
           <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-right">
             <div class="content d-flex flex-column justify-content-center">
               <h1 class="display-4 mx-5 px-4"><img class="logo" width="60px" height="60px"
-                  src="assets/img/LogoWhite.png"><strong> We Offers</strong></h1>
-
+                  src="assets/img/LogoWhite.png"><strong> We Offer</strong></h1>
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch" data-aos="fade-left">
@@ -127,7 +126,7 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class='bx bx-search-alt-2'></i>
-                  <h2> <strong>Markeing Strategies</strong> </h2>
+                  <h2> <strong>Marketing Strategies</strong> </h2>
 
                 </div>
                 <div class="col-md-6 icon-box mb-5" data-aos="fade-up" data-aos-delay="400">
@@ -139,6 +138,7 @@
             </div><!-- End .content-->
           </div>
         </div>
+
 
       </div>
 
