--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/Logo.png" rel="icon">
-  <link href="assets/img/Logo.png" rel="apple-touch-icon">
+   <!-- Favicons -->
+  <link href="assets/img/SparkleLogo.png" rel="icon">
+  <link href="assets/img/SparkleLogo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
