--- a/index.html
+++ b/index.html
@@ -936,14 +936,14 @@
             <div>
               <form class="border bg-white shadow" action="https://formspree.io/f/xnqykqqj" method="POST">
                 <h2 class="text-center mt-4">Contact Us</h2>
-                <div class="row px-4 mt-4">
-                  <div class="col-md-6 form-group">
+                <div class="row px-4 mt-4"> 
+                  <div class="col-md-6 form-group mb-3">
                     <input type="text" name="firstname" class="form-control" id="firstname" placeholder="Fisrtname" required>
                   </div>
-                  <div class="col-md-6 form-group mb-4">
+                  <div class="col-md-6 form-group mb-3">
                     <input type="text" name="lastname" class="form-control" id="lastname" placeholder="Lastname" required>
                   </div>
-                  <div class="col-md-12 form-group mt-3 mt-md-0">
+                  <div class="col-md-12 form-group mt-md-0">
                     <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
                   </div>
 
