--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
               <div class="info-box mb-4">
                 <i class="bx bx-envelope"></i>
                 <h2>Email Us</h2>
-                <h5><strong>info@sparkledigital.org</strong><br></h5>
+                <h5><strong>info@sparkledigital.co</strong><br></h5>
               </div>
             </div>
             <div>
