--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
               CHIGAGO IL 60603<br>
               <!-- United States <br><br> -->
 
-              <strong>Email:</strong> info@sparkledigital.org<br>
+              <strong>Email:</strong> info@sparkledigital.co<br>
             </p>
           </div>
 
