--- a/index.html
+++ b/index.html
@@ -1055,9 +1055,9 @@
     <div class="container d-md-flex py-4">
 
       <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
+        <!-- <div class="copyright">
           &copy; Copyright <strong><span>Sparkle Digital</span></strong>. All Rights Reserved
-        </div>
+        </div> -->
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
